# django-auth-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.claude/projects/-Users-wenbinxiang-x-open-django-auth-kit/memory/: MEMORY.md  feedback_no_lambda_assign.md
.github/workflows/: release.yml
django_auth_kit/: __init__.py  admin.py  apps.py  backends.py  channels.py  checks.py  invitation.py  middleware.py  models.py  ratelimit.py  settings.py  urls.py
django_auth_kit/jwt/: service.py
django_auth_kit/migrations/: 0001_initial.py  0002_alter_useremail_id_alter_usermobile_id.py
django_auth_kit/otp/: service.py
django_auth_kit/otp/backends/: base.py  console.py
django_auth_kit/schema/: enums.py  inputs.py  queries.py  schema.py  types.py  utils.py
django_auth_kit/schema/mutations/: auth.py  invitation.py  password.py  profile.py  social.py
django_auth_kit/social/: __init__.py  service.py  views.py
django_auth_kit/templates/django_auth_kit/: invitation_email.html  invitation_email.txt  otp_email.html  otp_email.txt
docs/: architecture.md  channels.md  configuration.md  contributing.md  getting-started.md  graphql-api.md  index.md  sms-backends.md  social-login.md
example/: pyproject.toml
example/example/: asgi.py  settings.py  urls.py
example/example/management/commands/: test_endpoints.py
tests/: conftest.py  test_jwt.py  test_models.py  test_otp.py  test_ratelimit.py
