[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-auth-kit"
version = "0.4.3"
description = "A Django authentication kit with GraphQL (Strawberry), JWT, OTP, and social login support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "Django Auth Kit Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django>=5.2",
    "strawberry-graphql-django>=0.80.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
channels = [
    "channels>=4.0.0",
]
social = [
    "django-allauth>=64.0.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["django_auth_kit*"]

[tool.setuptools.package-data]
django_auth_kit = ["templates/**/*.txt", "templates/**/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["django_auth_kit"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.uv.workspace]
members = [
    "example",
]
